syntax = "proto3";

package reservation;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./pb";

service ReservationService {
    rpc CreateReservation (CreateReservationRequest) returns (Reservation) {}
    rpc GetReservation (GetReservationRequest) returns (Reservation) {}
}

message Reservation {
    uint64 id = 1;
    uint64 trip_id = 10;
    uint64 diver_id = 20;
    float price = 30;
    repeated Room rooms = 40;
    google.protobuf.Timestamp created_on = 50 [(gogoproto.stdtime) = true];
    google.protobuf.Timestamp updated_on = 60 [(gogoproto.stdtime) = true];

    message Room {
        uint64 id = 1;
        uint64 room_type_id = 10;
        uint32 no_divers = 20;
        uint32 quantity = 40;
    }
}

message CreateReservationRequest {
    Reservation reservation = 1;
}

message GetReservationRequest {
    uint64 id = 1;
}
